--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <meta name="robots" content="index, follow">
     
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://griyatarudan.com/"> 
+    <meta property="og:url" content="https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/"> 
     <meta property="og:title" content="Griya Tarudan - Home Sweet Home">
     <meta property="og:description" content="Hunian aesthetic khusus putri dekat ISI Jogja. Aman, nyaman, fasilitas lengkap. Cek kamar sekarang!">
-    <meta property="og:image" content="img/bagian_kos_depan.jpg">
+    <meta property="og:image" content="https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/img/bagian_kos_depan.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://griyatarudan.com/">
+    <meta property="twitter:url" content="https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/">
     <meta property="twitter:title" content="Griya Tarudan - Kos Aesthetic Jogja">
     <meta property="twitter:description" content="Kos putri aman dan nyaman di Bantul. Dekat ISI, fasilitas lengkap.">
-    <meta property="twitter:image" content="img/bagian_kos_depan.jpg">
+    <meta property="twitter:image" content="https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/img/bagian_kos_depan.jpg">
     
     <link rel="canonical" href="https://griyatarudan.com/">
 
@@ -30,11 +30,11 @@
       "@type": "Hostel",
       "name": "Griya Tarudan",
       "image": [
-        "img/bagian_kos_depan.jpg",
-        "img/kamar_tipe_a.jpg"
+        "https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/img/bagian_kos_depan.jpg",
+        "https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan/img/kamar_tipe_a.jpg"
       ],
-      "@id": "https://griyatarudan.com",
-      "url": "https://griyatarudan.com",
+      "@id": "https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan",
+      "url": "https://jorsh-hub.github.io/Kost-putri-Griya-Tarudan",
       "telephone": "+6282146152529",
       "priceRange": "Rp 650.000 - Rp 1.100.000", 
       "address": {
@@ -653,3 +653,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
