--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
         <span class="absolute right-full mr-3 top-1/2 -translate-y-1/2 bg-white text-gray-800 text-xs font-bold px-2 py-1 rounded shadow opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap">Curhat soal Kos?</span>
     </a>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=99"></script>
 </body>
 </html>
+
