--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="container mx-auto max-w-6xl px-4 grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
                     
                     <div class="w-full reveal-in img-zoom-container rounded-2xl shadow-2xl rotate-2 hover:rotate-0 transition-all duration-500">
-                        <img src="img/suasana_kos.jpg" alt="Suasana Griya Tarudan yang Nyaman dan Aesthetic" class="img-zoom w-full h-auto aspect-square object-cover"
+                        <img src="img/bagian_kos_depan.jpg" alt="Tampak Depan Griya Tarudan yang Aesthetic" class="img-zoom w-full h-auto aspect-square object-cover"
                              onerror="this.src='https://placehold.co/600x600/fde6f3/c5308b?text=Suasana+Kos'">
                     </div>
                     
