--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             
             <div class="flex-shrink-0">
                 <a href="#" class="nav-link btn-smooth inline-flex items-center" data-target="page-home">
-                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-auto mr-3 rounded-md transition-all duration-300">
+                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-auto mr-3 rounded-md transition-all duration-300 dark:bg-white dark:p-0.5">
                     <span class="text-xl md:text-2xl font-brand text-pink-600 dark:text-pink-400 font-bold tracking-tight transition-colors duration-300">Griya Tarudan</span>
                 </a>
             </div>
@@ -203,7 +203,7 @@
                     <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-900 dark:text-white mb-16 font-brand reveal-up">Kenapa Memilih Kos Ini?</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.1s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.1s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" /></svg>
                             </div>
@@ -211,7 +211,7 @@
                             <p class="text-gray-600 dark:text-gray-300 leading-relaxed">Tidur tenang dengan sistem CCTV 24 jam dan akses gerbang yang terkontrol.</p>
                         </div>
 
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.2s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.2s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                             </div>
@@ -219,7 +219,7 @@
                             <p class="text-gray-600 dark:text-gray-300 leading-relaxed">Dekat banget sama Kampus ISI, halte Trans Jogja, dan pusat kuliner.</p>
                         </div>
 
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.3s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.3s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" /></svg>
                             </div>
@@ -227,7 +227,7 @@
                             <p class="text-gray-600 dark:text-gray-300 leading-relaxed">Tinggal bawa koper! Kasur, lemari, meja, hingga Wi-Fi ngebut sudah siap.</p>
                         </div>
 
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.4s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.4s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
                             </div>
@@ -235,7 +235,7 @@
                             <p class="text-gray-600 dark:text-gray-300 leading-relaxed">Lingkungan 100% putri yang menjaga privasi dan kenyamanan Kakak.</p>
                         </div>
 
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.5s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.5s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                             </div>
@@ -243,7 +243,7 @@
                             <p class="text-gray-600 dark:text-gray-300 leading-relaxed">Suasana kondusif dan jauh dari kebisingan, pas banget buat fokus belajar.</p>
                         </div>
 
-                        <div class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.6s;">
+                        <div class="bg-white dark:bg-gray-800 border border-transparent dark:border-gray-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 text-center group card-hover reveal-in" style="transition-delay: 0.6s;">
                             <div class="w-16 h-16 bg-pink-100 dark:bg-pink-900/30 rounded-full flex items-center justify-center mx-auto mb-6 group-hover:scale-110 transition-transform duration-300">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-pink-600 dark:text-pink-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                             </div>
