--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             
             <div class="flex-shrink-0">
                 <a href="#" class="nav-link btn-smooth inline-flex items-center" data-target="page-home">
-                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-auto mr-3 rounded-md transition-all duration-300 dark:bg-white dark:p-0.5">
+                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-10 object-contain mr-3 rounded-full transition-all duration-300 dark:bg-white dark:p-1">
                     <span class="text-xl md:text-2xl font-brand text-pink-600 dark:text-pink-400 font-bold tracking-tight transition-colors duration-300">Griya Tarudan</span>
                 </a>
             </div>
@@ -401,6 +401,14 @@
 
                         <details class="group bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden cursor-pointer transition-all duration-300 hover:shadow-lg border border-transparent hover:border-pink-200 dark:hover:border-pink-800">
                             <summary class="flex justify-between items-center font-medium text-gray-900 dark:text-white p-6 list-none select-none">
+                                <span>Kak, harga sewa udah sama listrik belum?</span>
+                                <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
+                            </summary>
+                            <div class="text-gray-600 dark:text-gray-300 px-6 pb-6 pt-0 leading-relaxed animate-fadeIn"><p>Belum ya Kak, listriknya pakai token (prabayar) sendiri-sendiri per kamar. Jadi Kakak bisa atur sendiri pemakaiannya sesuai kebutuhan.</p></div>
+                        </details>
+
+                        <details class="group bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden cursor-pointer transition-all duration-300 hover:shadow-lg border border-transparent hover:border-pink-200 dark:hover:border-pink-800">
+                            <summary class="flex justify-between items-center font-medium text-gray-900 dark:text-white p-6 list-none select-none">
                                 <span>Sistem pembayaran awalnya gimana Kak?</span>
                                 <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
                             </summary>
@@ -421,30 +429,6 @@
                                 <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
                             </summary>
                             <div class="text-gray-600 dark:text-gray-300 px-6 pb-6 pt-0 leading-relaxed animate-fadeIn"><p>Untuk Kamar selain 201 apabila akan menambah AC 1/2 PK akan dikenakan biaya sebesar <strong>Rp 250.000/bulan</strong> dengan minimal kontrak selama <strong>1 tahun</strong>.</p></div>
-                        </details>
-
-                        <details class="group bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden cursor-pointer transition-all duration-300 hover:shadow-lg border border-transparent hover:border-pink-200 dark:hover:border-pink-800">
-                            <summary class="flex justify-between items-center font-medium text-gray-900 dark:text-white p-6 list-none select-none">
-                                <span>Ada bonus referral nggak kalau ajak teman?</span>
-                                <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
-                            </summary>
-                            <div class="text-gray-600 dark:text-gray-300 px-6 pb-6 pt-0 leading-relaxed animate-fadeIn"><p>Ada banget! Pemberian <strong>bonus Fee Rp 50.000/penghuni</strong> bagi siapapun yang mendapatkan penghuni baru dengan masa tinggal minimal <strong>3 bulan</strong>.</p></div>
-                        </details>
-
-                        <details class="group bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden cursor-pointer transition-all duration-300 hover:shadow-lg border border-transparent hover:border-pink-200 dark:hover:border-pink-800">
-                            <summary class="flex justify-between items-center font-medium text-gray-900 dark:text-white p-6 list-none select-none">
-                                <span>Kalau ada tamu (cewek) menginap bayar nggak?</span>
-                                <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
-                            </summary>
-                            <div class="text-gray-600 dark:text-gray-300 px-6 pb-6 pt-0 leading-relaxed animate-fadeIn"><p>Bisa kok, tapi tamu menginap akan dikenakan tambahan biaya <strong>Rp 100.000/hari</strong>.</p></div>
-                        </details>
-                        
-                        <details class="group bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden cursor-pointer transition-all duration-300 hover:shadow-lg border border-transparent hover:border-pink-200 dark:hover:border-pink-800">
-                            <summary class="flex justify-between items-center font-medium text-gray-900 dark:text-white p-6 list-none select-none">
-                                <span>Kak, harga sewa udah sama listrik belum?</span>
-                                <span class="transition group-open:rotate-180 text-gray-500 dark:text-gray-400"><svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg></span>
-                            </summary>
-                            <div class="text-gray-600 dark:text-gray-300 px-6 pb-6 pt-0 leading-relaxed animate-fadeIn"><p>Belum ya Kak, listriknya pakai token (prabayar) sendiri-sendiri per kamar. Jadi Kakak bisa atur sendiri pemakaiannya sesuai kebutuhan.</p></div>
                         </details>
                     </div>
                 </div>
