--- a/index.html
+++ b/index.html
@@ -84,6 +84,30 @@
         }
       }
     </script>
+
+    <style>
+        /* Custom "Girly" Scrollbar */
+        ::-webkit-scrollbar {
+            width: 14px;
+        }
+        ::-webkit-scrollbar-track {
+            background-color: #fff1f2; /* rose-50 for light mode */
+        }
+        .dark ::-webkit-scrollbar-track {
+            background-color: #1f2937; /* gray-850 for dark mode */
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: #db2777; /* pink-600 */
+            border-radius: 20px;
+            border: 4px solid #fff1f2; /* creates padding effect around thumb */
+        }
+        .dark ::-webkit-scrollbar-thumb {
+             border-color: #1f2937; /* gray-850 border for dark mode */
+        }
+         ::-webkit-scrollbar-thumb:hover {
+            background-color: #be185d; /* pink-700 on hover */
+        }
+    </style>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -98,7 +122,7 @@
             
             <div class="flex-shrink-0">
                 <a href="#" class="nav-link btn-smooth inline-flex items-center" data-target="page-home">
-                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-10 object-contain mr-3 rounded-full transition-all duration-300 dark:bg-white dark:p-1">
+                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-10 object-contain mr-3 rounded-full transition-all duration-300 dark:bg-white">
                     <span class="text-xl md:text-2xl font-brand text-pink-600 dark:text-pink-400 font-bold tracking-tight transition-colors duration-300">Griya Tarudan</span>
                 </a>
             </div>
@@ -156,20 +180,20 @@
     <main>
 
         <section id="page-home" class="page active">
-            <div class="relative h-[65vh] min-h-[500px] bg-cover bg-center overflow-hidden group" style="background-image: url('img/bagian_kos_depan.jpg');" role="img" aria-label="Tampak depan Griya Tarudan Aesthetic di Bantul">
-                <div class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/20 to-black/60 transition-opacity duration-700"></div>
-                <div class="container mx-auto max-w-6xl px-4 h-full flex flex-col justify-center items-center text-center relative z-10">
-                    <h1 class="text-5xl md:text-6xl font-brand text-white mb-6 reveal-in drop-shadow-lg" style="transition-delay: 0.1s;">
+            <div class="relative h-[65vh] min-h-[550px] bg-cover bg-center overflow-hidden group" style="background-image: url('img/bagian_kos_depan.jpg');" role="img" aria-label="Tampak depan Griya Tarudan Aesthetic di Bantul">
+                <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/30 to-black/70 transition-opacity duration-700"></div>
+                <div class="container mx-auto max-w-6xl px-4 h-full flex flex-col justify-center items-center text-center relative z-10 py-20">
+                    <h1 class="text-4xl md:text-6xl lg:text-7xl font-brand text-white mb-8 reveal-in drop-shadow-lg leading-tight" style="transition-delay: 0.1s;">
                         Welcome Home, Kak! 
                     </h1>
-                    <p class="text-lg md:text-xl text-gray-100 max-w-2xl mb-10 reveal-in leading-relaxed" style="transition-delay: 0.2s;">
+                    <p class="text-lg md:text-xl text-gray-100 max-w-2xl mb-12 reveal-in leading-relaxed font-light" style="transition-delay: 0.2s;">
                         Hunian aesthetic, aman, dan super nyaman di Bantul. Cocok banget buat Kakak istirahat setelah seharian aktivitas.
                     </p>
-                    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 reveal-up" style="transition-delay: 0.3s;">
-                        <a href="#" class="nav-link bg-pink-600 text-white px-8 py-3.5 rounded-full font-medium text-lg btn-smooth shadow-lg shadow-pink-600/40" data-target="page-rooms">
+                    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-5 reveal-up" style="transition-delay: 0.3s;">
+                        <a href="#" class="nav-link bg-pink-600 text-white px-8 py-4 rounded-full font-medium text-lg btn-smooth shadow-lg shadow-pink-600/40 hover:bg-pink-700 transition-all" data-target="page-rooms">
                             Cek Kamar Yuk
                         </a>
-                        <a href="#" class="nav-link bg-white/10 backdrop-blur-md border border-white/50 text-white px-8 py-3.5 rounded-full font-medium text-lg btn-smooth hover:bg-white hover:text-pink-600" data-target="page-contact">
+                        <a href="#" class="nav-link bg-white/10 backdrop-blur-md border-2 border-white/70 text-white px-8 py-4 rounded-full font-medium text-lg btn-smooth hover:bg-white hover:text-pink-600 transition-all" data-target="page-contact">
                             Tanya Dulu
                         </a>
                     </div>
