--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
             
             <div class="flex-shrink-0">
                 <a href="#" class="nav-link btn-smooth inline-flex items-center" data-target="page-home">
-                    <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="h-10 w-10 object-contain mr-3 rounded-full transition-all duration-300 dark:bg-white">
+                    <div class="h-10 w-10 mr-3 rounded-full overflow-hidden bg-rose-100 dark:bg-white transition-colors duration-300 flex-shrink-0 shadow-sm">
+                        <img src="img/logo_kos2an.png" alt="Logo Griya Tarudan" class="w-full h-full object-cover">
+                    </div>
                     <span class="text-xl md:text-2xl font-brand text-pink-600 dark:text-pink-400 font-bold tracking-tight transition-colors duration-300">Griya Tarudan</span>
                 </a>
             </div>
