--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     </div>
                     
                     <div class="img-zoom-container rounded-xl shadow-md aspect-square reveal-in" style="transition-delay: 0.35s;">
-                        <img src="img/toilet.jpg" alt="Fasilitas Kamar Mandi Bersih Kost Putri" class="w-full h-full object-cover img-zoom" onerror="this.src='https://placehold.co/400x400/fde6f3/c5308b?text=Toilet'">
+                        <img src="img/toilet.jpg" alt="Fasilitas Kamar Mandi Bersih Kost Putri" class="w-full h-full object-cover img-zoom" onerror="this.src='https://placehold.co/400x400/fde6f3/c5308b?text=Kamar+Mandi'">
                     </div>
 
                     <div class="img-zoom-container rounded-xl shadow-md aspect-square reveal-in" style="transition-delay: 0.4s;">
@@ -529,7 +529,7 @@
                     </div>
 
                     <div class="img-zoom-container rounded-xl shadow-md aspect-square reveal-in" style="transition-delay: 0.45s;">
-                        <img src="img/kos_depan_sore.jpg" alt="Suasana Kos Griya Tarudan Saat Sore" class="w-full h-full object-cover img-zoom" onerror="this.src='https://placehold.co/400x400/fde6f3/c5308b?text=Suasana+Sore'">
+                        <img src="img/Fasad_Depan_Kos.jpg" alt="Fasad Depan Kos Griya Tarudan" class="w-full h-full object-cover img-zoom" onerror="this.src='https://placehold.co/400x400/fde6f3/c5308b?text=Fasad+Depan'">
                     </div>
 
                 </div>
